--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,12 +1,13 @@
 name: PluginPortal
-version: 1.0
+version: 1.1.0
 main: link.portalbox.pluginportal.PluginPortal
-api-version: 1.16
+api-version: 1.19
 authors: [ Portal Box Team ]
 description: In-game plugin downloader and updater using the SpigotMC marketplace.
 website: https://portalbox.link
+libraries:
+  - commons-io:commons-io:2.11.0
 commands:
   pluginportal:
     aliases: [pp]
     description: Plugin Portal command.
-    usage: /pluginportal
