--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'link.portalbox'
-version = '1.0-SNAPSHOT'
+version = '1.1'
 
 repositories {
     mavenCentral()
@@ -18,10 +18,14 @@ repositories {
 
 dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
-    compileOnly 'org.spigotmc:spigot-api:1.16.4-R0.1-SNAPSHOT'
+    compileOnly("org.spigotmc:spigot-api:1.16.4-R0.1-SNAPSHOT") {
+        exclude group: 'com.google.code.gson'
+    }
+
     implementation 'org.bstats:bstats-bukkit:3.0.0'
     implementation 'com.github.portal-box:pp-lib:1.0.5'
     compileOnly 'commons-io:commons-io:2.11.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 test {
