--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,9 @@ dependencies {
     }
 
     implementation 'org.bstats:bstats-bukkit:3.0.0'
-    implementation 'com.github.portal-box:pp-lib:1.2.1'
+    implementation 'com.github.portal-box:pp-lib:1.2.3'
     compileOnly 'commons-io:commons-io:2.11.0'
-    implementation 'com.google.code.gson:gson:2.10.1'
+    compileOnly 'com.google.code.gson:gson:2.10.1'
 }
 
 test {
