--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,7 @@ description: In-game plugin downloader and updater using the SpigotMC marketplac
 website: https://portalbox.link
 libraries:
   - commons-io:commons-io:2.11.0
+  - com.google.code.gson:gson:2.10.1
 commands:
   pluginportal:
     aliases: [pp]
