--- a/.gitignore
+++ b/.gitignore
@@ -5,16 +5,14 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/
 *.iws
 *.iml
 *.ipr
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+!/.idea/.name
 
 ### Eclipse ###
 .apt_generated
