--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ io.papermc.hangar-publish-plugin.default-api-key=3a90fb42-cb5b-47af-bc70-69e4633
 # Set to true to use hangar.papermc.dev endpoint as opposed to the prod endpoint (used for testing hangar automated publishing)
 hangar-publish-plugin.use-dev-endpoint=false
 # This is the hash of the first commit after the last release - used for automating publishing to hangar
-release-start-commit=d3e5fff5ccfb54f1b055290d907f6f82d501dcaf
+release-start-commit=
