--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
-io.papermc.hangar-publish-plugin.default-api-key=3a90fb42-cb5b-47af-bc70-69e46337f870.73ef607d-3e24-446b-85ef-861aefb79f37
+io.papermc.hangar-publish-plugin.default-api-key=
 # Set to true to use hangar.papermc.dev endpoint as opposed to the prod endpoint (used for testing hangar automated publishing)
 hangar-publish-plugin.use-dev-endpoint=false
 # This is the hash of the first commit after the last release - used for automating publishing to hangar
