--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,11 @@ name: Publish release
 on:
   release:
     types: created
+    
+permissions:
+  repo: write
+  releases: write
+
 
 jobs:
   build:
