--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,5 @@
 # --------------- LANGUAGE ---------------
-# Supported languages: en_US, de_DE (more coming soon)
+# Supported languages: en_US (more coming soon)
 # Language Codes: https://learn.microsoft.com/en-us/linkedin/shared/references/reference-tables/language-codes
 # Want to help translate? Join our Discord: https://discord.gg/pluginportal
 language: en_US # USE "en_US", this chooses which language the plugin will use.
