--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: PluginPortal
-version: 1.5.0
+version: 1.5.1
 main: link.portalbox.pluginportal.PluginPortal
 api-version: 1.13
 authors: [ Portal Box Team ]
@@ -8,6 +8,9 @@ website: https://pluginportal.link
 libraries:
   - commons-io:commons-io:2.11.0
   - com.google.code.gson:gson:2.10.1
+  - com.fasterxml.jackson.core:jackson-core:2.15.1
+  - com.fasterxml.jackson.core:jackson-databind:2.15.1
+  - com.fasterxml.jackson.module:jackson-module-kotlin:2.15.1
 commands:
   pluginportal:
     aliases: [pp]
