--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: plugin/build/libs/plugin-all.jar
+          asset_path: ${{ github.workspace }}/plugin/build/libs/plugin-all.jar
           asset_name: plugin-portal.jar
           asset_content_type: application/java-archive
