updating will no longer update if its the same version, saved a duplicaet update bug.

--- a/.carbon/cli.toml
+++ b/.carbon/cli.toml
@@ -9,4 +9,4 @@ file = "./plugin/build/libs/plugin-all.jar"
 [watch_plugin]
 file_name = "plugin-all.jar"
 directory = "./plugin/build/libs"
-post_deploy_command = "plugman reload PluginPortal"
+post_deploy_command = "reload confirm"
